[gd_scene load_steps=14 format=2]

[ext_resource path="res://Juego/Naves/NaveBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://Juego/Naves/Enemigos/Interceptor/EnemigoInterceptor.gd" type="Script" id=2]
[ext_resource path="res://Juego/Naves/Enemigos/Interceptor/laserRed10.png" type="Texture" id=3]
[ext_resource path="res://Juego/Naves/Enemigos/Interceptor/spaceShips_001.png" type="Texture" id=4]
[ext_resource path="res://Juego/Proyectiles/ProyectilEnemigo.tscn" type="PackedScene" id=5]

[sub_resource type="PhysicsMaterial" id=5]
friction = 0.0
bounce = 0.5

[sub_resource type="CircleShape2D" id=6]
radius = 40.1995

[sub_resource type="Animation" id=3]
resource_name = "default"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "spawn"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.793289 ),
"transitions": PoolRealArray( 1, 0.164939 ),
"update": 0,
"values": [ Vector2( 0.05, 0.05 ), Vector2( 0.4, 0.4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteSpawn:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.793289 ),
"transitions": PoolRealArray( 1, 0.203063 ),
"update": 0,
"values": [ Vector2( 1.5, 1.5 ), Vector2( 0, 0 ) ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 779.311

[sub_resource type="CircleShape2D" id=1]
radius = 432.843

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 0.678431, 0, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.690196, 0.117647, 0.117647, 1 )

[node name="EnemigoInterceptor" groups=["minimapa"] instance=ExtResource( 1 )]
collision_layer = 2
collision_mask = 13
physics_material_override = SubResource( 5 )
contacts_reported = 4
contact_monitor = true
can_sleep = false
script = ExtResource( 2 )
hitpoints = 20.0
potencia_max = 600.0

[node name="Sprite" parent="." index="0"]
rotation = -1.5708
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource( 6 )

[node name="Canon" parent="." index="2"]
proyectil = ExtResource( 5 )
cadencia_disparo = 1.2

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="4"]
autoplay = "spawn"
anims/default = SubResource( 3 )
anims/spawn = SubResource( 4 )

[node name="SpriteSpawn" type="Sprite" parent="." index="5"]
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 3 )

[node name="AreaDisparo" type="Area2D" parent="." index="6"]
collision_layer = 0

[node name="CollisionShape2D3" type="CollisionShape2D" parent="AreaDisparo" index="0"]
shape = SubResource( 2 )

[node name="AreaDeteccion" type="Area2D" parent="." index="7"]
collision_layer = 0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="AreaDeteccion" index="0"]
shape = SubResource( 1 )

[node name="BarraSalud" parent="." index="8"]
custom_styles/fg = SubResource( 7 )
custom_styles/bg = SubResource( 8 )

[connection signal="body_entered" from="." to="." method="_on_EnemigoInterceptor_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="AreaDisparo" to="." method="_on_AreaDisparo_body_entered"]
[connection signal="body_exited" from="AreaDisparo" to="." method="_on_AreaDisparo_body_exited"]
[connection signal="body_entered" from="AreaDeteccion" to="." method="_on_AreaDeteccion_body_entered"]
[connection signal="body_exited" from="AreaDeteccion" to="." method="_on_AreaDeteccion_body_exited"]
